test_suite/alan-2022-examples/failing/006990_mutation.alan
source q begin put end 7 end
